test/functions/iterators/vass/void-iterator-error.good
void-iterator-error.chpl:2: error: an iterator may not have a void return type
